# aieng-ui

./: .gitignore  README.md
.github/workflows/: pr-risk-report.yml
backend/: pyproject.toml
backend/app/: agent_engine.py  agent_workbench.py  aieng_bridge.py  freecad_bridge.py  main.py  runtime.py
backend/app/providers/: registry.py
backend/app/providers/freecad/: __init__.py  adapter.py  bridge_runner.py  preview.py
backend/tests/: test_api.py
backend/tests/fixtures/: minimal_cantilever.inp
docs/: demo-readiness-checklist.md  milestone-vertical-cae-mvp.md  quickstart-real-ccx.md  quickstart-vertical-cae-demo.md  runtime_architecture.md
frontend/src/: App.tsx  api.ts  main.tsx  style.css  types.ts
scripts/: backend.ps1
