[project]
name = "aieng-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the aieng web platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "mcp>=1.25.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "trimesh>=4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
